# catalyst-bot

./: .claude-context.md  .editorconfig.ini  .env.example  .env.staging  .env.staging.example.ini  .flake8.ini  .gitattributes  .gitignore  .pre-commit-config.yaml  =1.9.0  =5.3.0  ADMIN_CHANNEL_COMMANDS.md  ADMIN_COMMANDS_QUICK_REF.md  ADMIN_CONTROLS_GUIDE.md  ADMIN_TESTING_QUICK_START.md  AGENT2_COMPLETION_REPORT.md  AGENT_3_FILE_REFERENCE.txt  ALERT_TESTING_SUMMARY.md  ALERT_TRACKING_ANALYSIS.md  ALL_FIXES_STATUS_SUMMARY.md  API_ANALYSIS_DEC9_2025.md  API_ANALYSIS_SUMMARY.txt  API_KEY_ROTATION_GUIDE.md  APPLY.ps1  ARCHITECTURE_STABILITY_REPORT.md  ARCHITECTURE_UPDATES.md  BACKTESTING_GUIDE.md  BACKTEST_EXAMPLES.md  CHANGELOG.md  CHART_ARCHITECTURE_DIAGRAM.md  CHART_ENV_VARIABLES.md  CHART_FIXES_IMPLEMENTED.md  CODEBASE_HEALTH_REPORT.md  CODEQL_SECURITY_REVIEW.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_REPORT.md  CONFIGURATION_CHANGES_SUMMARY.md  CRITICAL_PATCHES_IMPLEMENTATION_REPORT.md  DEPENDENCY_AUDIT_REPORT.txt  DEPENDENCY_GRAPH.md  (+250 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
backtest_results/: backtest_2year_20251014_211654.json  backtest_2year_20251014_211654.md
data/: README.md  events.jsonl  finviz_probe.csv  tickers.js  watchlist.csv
docker/: Dockerfile
docs/: BROKER_INTEGRATION_CHECKLIST.md  FUNDAMENTAL_DATA.md  IMPLEMENTATION_CONTEXT.md  LEGACY-TO-TRADINGENGINE-MIGRATION-PLAN.md  LLM_USAGE_MONITORING.md  MANUAL_CAPTURE_ENHANCEMENT_PLAN.md  MASTER-IMPLEMENTATION-GUIDE.md  MASTER_IMPLEMENTATION_PLAN.md  RETROSPECTIVE_FILTER_REFERENCE.md  (+15 more)
(+780 files in other folders)
