[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-bot"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["catalyst_bot*"]

[tool.pytest.ini_options]
# Suppress trio backend failures for anyio
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "anyio: mark test to run with anyio",
    "live: mark test to run with live API (requires paper trading account)",
]
